[metadata]
name = nagare-services-gcloud-pubsub
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Google cloud pub/sub service
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/services-gcloud-pubsub
    Tracker = https://github.com/nagareproject/services-gcloud-pubsub/issues

[options]
zip_safe = False
packages = find:
install_requires =
    google-cloud-pubsub>=2.3.0,<3.0.0
    nagare-server

[options.entry_points]
nagare.commands =
    gcloud = nagare.admin.gcloud.pubsub:Commands

nagare.commands.gcloud =
    subscribe = nagare.admin.gcloud.pubsub:Subscribe
    publish = nagare.admin.gcloud.pubsub:Publish

nagare.services =
    gcloud.pub = nagare.services.gcloud.pubsub:Publisher
    gcloud.sub = nagare.services.gcloud.pubsub:Subscriber

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
